# Nuclex.Audio.Native

./: .gitignore  CMakeLists.txt  Dependencies.md  Notice.md  Nuclex.Audio.Native (msvc-14.2).vcxproj  Nuclex.Audio.Native (msvc-14.2).vcxproj.filters  Nuclex.Audio.Native.Benchmark (msvc-14.2).vcxproj  Nuclex.Audio.Native.Benchmark (msvc-14.2).vcxproj.filters  Nuclex.Audio.Native.Tests (msvc-14.2).vcxproj  Nuclex.Audio.Native.Tests (msvc-14.2).vcxproj.filters  ReadMe.md  SConstruct  build.cmd  build.sh
Benchmarks/: BenchmarkMain.cpp
Documents/: ContainerFormatOverview.md  Designs.md  IETF Free Lossless Audio Codec (2024).txt  WavPackSeeking.md
Include/Nuclex/Audio/: AudioSampleFormat.h  Channel.h  ChannelInfo.h  ChannelPlacement.h  Config.h  ContainerInfo.h  KnownChannelLayouts.h  Track.h  TrackInfo.h
Include/Nuclex/Audio/Errors/: CorruptedFileError.h  FileAccessError.h  UnsupportedFormatError.h
Include/Nuclex/Audio/Processing/: BitExtension.h  DecibelConverter.h  LittleEndianSampleConverter.h  Normalization.h  Quantization.h  Reconstruction.h  Rounding.h  SampleConverter.h
Include/Nuclex/Audio/Storage/: AudioCodec.h  AudioLoader.h  AudioReader.h  AudioSaver.h  AudioTrackDecoder.h  AudioTrackDecoderInternal.h  AudioTrackEncoder.h  AudioTrackEncoderBuilder.h  AudioTrackEncoderInternal.h  VirtualFile.h
Resources/: 5s-silent-5dot1-16bit.flac  5s-silent-5dot1-24bit.flac  5s-silent-stereo-16bit.flac  5s-silent-stereo-24bit.flac  5s-silent-stereo-float.wv  flac-5dot1-int16-v143.flac  flac-exotic-int16-v143.flac  flac-stereo-int16-v143.flac  flac-stereo-int24-v143.flac  opus-5dot1-v152.opus  opus-7dot1-v152.opus  opus-stereo-v152.opus  wavpack-5dot1-int16-v416.wv  wavpack-7dot1-int16-v416.wv  wavpack-exotic-int16-v416.wv  wavpack-stereo-float32-v416.wv  wavpack-stereo-int16-v416.wv  wavpack-stereo-int24-v416.wv
Source/: AudioSampleFormat.cpp  Channel.cpp  ChannelPlacement.cpp  Config.cpp  ContainerInfo.cpp  KnownChannelLayouts.cpp  Track.cpp  TrackInfo.cpp
Source/Errors/: CorruptedFileError.cpp  FileAccessError.cpp  UnsupportedFormatError.cpp
Source/Platform/: FlacApi.cpp  FlacApi.h  LinuxFileApi.cpp  LinuxFileApi.h  OpusApi.cpp  OpusApi.h  OpusEncoderApi.cpp  OpusEncoderApi.h  PosixApi.cpp  PosixApi.h  PosixFileApi.cpp  PosixFileApi.h  VorbisApi.cpp  VorbisApi.h  WavPackApi.cpp  WavPackApi.h  WindowsApi.cpp  WindowsApi.h  WindowsFileApi.cpp  WindowsFileApi.h
Source/Processing/: BitExtension.cpp  DecibelConverter.cpp  Normalization.cpp  Quantization.cpp  Reconstruction.cpp  Rounding.cpp  SampleConverter.cpp  VolumeDetector.cpp
Source/Storage/: AudioCodec.cpp  AudioLoader.cpp  AudioSaver.cpp  AudioTrackDecoder.cpp  AudioTrackDecoderInternal.cpp  AudioTrackEncoder.cpp  AudioTrackEncoderBuilder.cpp  AudioTrackEncoderInternal.cpp  EndianReader.cpp  EndianReader.h  RealFile.Linux.cpp  RealFile.Posix.cpp  RealFile.Windows.cpp  RealFile.cpp  RealFile.h  VirtualFile.cpp
Source/Storage/Flac/: FlacAudioCodec.cpp  FlacAudioCodec.h  FlacDetection.cpp  FlacDetection.h  FlacHelpers.cpp  FlacHelpers.h  FlacReader.cpp  FlacReader.h  FlacTrackDecoder.cpp  FlacTrackDecoder.h  FlacVirtualFileAdapter.cpp  FlacVirtualFileAdapter.h
Source/Storage/Opus/: OpusAudioCodec.cpp  OpusAudioCodec.h  OpusDetection.cpp  OpusDetection.h  OpusHelpers.cpp  OpusHelpers.h  OpusReader.cpp  OpusReader.h  OpusTrackDecoder.cpp  OpusTrackDecoder.h  OpusTrackEncoder.cpp  OpusTrackEncoder.h  OpusTrackEncoderBuilder.cpp  OpusTrackEncoderBuilder.h  OpusVirtualFileAdapter.cpp  OpusVirtualFileAdapter.h
Source/Storage/Shared/: ChannelOrderFactory.cpp  ChannelOrderFactory.h  ChannelOrderTransformer.cpp  ChannelOrderTransformer.h  VirtualFileAdapterState.cpp  VirtualFileAdapterState.h
Source/Storage/Vorbis/: VorbisAudioCodec.cpp  VorbisAudioCodec.h  VorbisDetection.cpp  VorbisDetection.h  VorbisReader.cpp  VorbisReader.h  VorbisTrackDecoder.cpp  VorbisTrackDecoder.h  VorbisVirtualFileAdapter.cpp  VorbisVirtualFileAdapter.h
Source/Storage/WavPack/: WavPackAudioCodec.cpp  WavPackAudioCodec.h  WavPackDetection.cpp  WavPackDetection.h  WavPackHelpers.cpp  WavPackHelpers.h  WavPackReader.Decoding.inl  WavPackReader.cpp  WavPackReader.h  WavPackTrackDecoder.cpp  WavPackTrackDecoder.h  WavPackVirtualFileAdapter.cpp  WavPackVirtualFileAdapter.h
Source/Storage/Wave/: WaveHelpers.cpp  WaveHelpers.h
Source/Storage/Waveform/: WaveformAudioCodec.cpp  WaveformAudioCodec.h  WaveformDetection.cpp  WaveformDetection.h  WaveformHelpers.cpp  WaveformHelpers.h  WaveformParser.cpp  WaveformParser.h  WaveformReader.Conversion.inl  WaveformReader.cpp  WaveformReader.h  WaveformTrackDecoder.cpp  WaveformTrackDecoder.h
Tests/: ChannelPlacementTests.cpp  ExpectEither.cpp  ExpectEither.h  ExpectRange.h
Tests/Errors/: FileAccessErrorTest.cpp
Tests/Processing/: BitExtensionTests.cpp  NormalizationTests.cpp  QuantizationTests.cpp  ReconstructionTests.cpp  RoundingTests.cpp  SampleConverterTest.cpp  SineWaveDetector.cpp  SineWaveDetector.h  SineWaveDetectorTest.cpp
Tests/Storage/: AudioLoaderTests.cpp  AudioSaverTests.cpp  ByteArrayAsFile.cpp  ByteArrayAsFile.h  FailingVirtualFile.cpp  FailingVirtualFile.h  ResourceDirectoryLocator.cpp  ResourceDirectoryLocator.h  TestAudioVerifier.cpp  TestAudioVerifier.h
Tests/Storage/Flac/: FlacAudioCodecTests.cpp  FlacDetectionTests.cpp  FlacHelpersTests.cpp  FlacTrackDecoderTest.cpp
Tests/Storage/Opus/: OpusAudioCodecTests.cpp  OpusDetectionTests.cpp  OpusHelpersTests.cpp  OpusReaderTest.cpp  OpusTrackDecoderTest.cpp  OpusTrackEncoderBuilderTest.cpp
Tests/Storage/Shared/: ChannelOrderFactoryTest.cpp  ChannelOrderTransformerTests.cpp  VirtualFileAdapterStateTest.cpp
Tests/Storage/Vorbis/: VorbisAudioCodecTests.cpp  VorbisDetectionTests.cpp  VorbisTrackDecoderTests.cpp
Tests/Storage/WavPack/: WavPackAudioCodecTests.cpp  WavPackDetectionTests.cpp  WavPackHelpersTests.cpp  WavPackTrackDecoderTests.cpp
Tests/Storage/Wave/: WaveHelpersTests.cpp
Tests/Storage/Waveform/: WaveformAudioCodecTests.cpp  WaveformDetectionTests.cpp  WaveformHelpersTests.cpp  WaveformTrackDecoderTests.cpp
